2009-03-09  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Removed SGX corruption workaround (SGX 1.3 drivers now integrated)

2009-03-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.19

2009-02-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#103417 Animation actors cannot be resized
	Patch from Artem Egorkine.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	  Set the size (but not the position) of
	  MBWMCompMgrClutterClientDontPosition clients
	  when they are reconfigured.

2009-02-25  Jan Arne Petersen  <jpetersen@openismus.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	  (mb_wm_comp_mgr_clutter_client_show_real): Use clutter_actor_show
	  instead of clutter_actor_show_all, so not all children are forced to
	  be shown too.

2009-02-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_configure_real): Remove the "xmas hack"
	for systemui menus. Apparently this hasn't been effective anyway
	because systemui is now using the notification type.

2009-02-25  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Removed copied version of TidyTextureFrame that doesn't compile
	with clutter trunk.

2009-02-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.18

2009-02-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Being intransient is now a sufficient condition to be considered
	system-modal.  A dialog's modality is not relevant to its
	system-modality.  After discussion with Kimmo.  
	This isn't the change that fixes MB#97489 but is in sympathy
	with it.

	* matchbox/core/mb-window-manager.c: Change preresquisites for
	being system-modal.
	* matchbox/core/mb-wm-types.h: Update comment.

2009-02-16  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client-window.c: initialise cookies