@@ -1,3 +1,11 @@
+2009-03-09  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+        Fixes: NB#103954.
+	
+	* matchbox/core/mb-window-manager.c: although any window which
+	has no parents is considered system-modal, this does not include
+	the desktop!
+
 2009-03-09  Gordon Williams  <gordon.williams@collabora.co.uk>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
